--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MealPlaner"
         tools:targetApi="31">
         <activity
+            android:name=".MealData"
+            android:exported="false" />
+        <activity
             android:name=".Category.View.CategoryData"
             android:exported="false" />
         <activity
