--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,22 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'com.google.android.material:material:1.2.1'
 
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+
+    // navigation bar
+    implementation 'com.google.android.material:material:1.0.0'
+
+    //circular image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+// retrofit
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    //viewimage
+    implementation'androidx.viewpager2:viewpager2:1.0.0'
+    //roundedImage
+
 }
