--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,21 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/burger"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MealPlaner"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".IngridiantData.IngridiantActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Search.Ingrediant.View.IngrediantSearch"
+            android:exported="false" />
         <activity
             android:name=".CalendarActivity"
             android:exported="false" />
@@ -24,13 +29,13 @@
             android:name=".SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".Meal.MealData"
+            android:name=".Meal.View.MealData"
             android:exported="false" />
         <activity
             android:name=".Category.View.CategoryData"
             android:exported="false" />
         <activity
-            android:name=".Search.View.Search"
+            android:name=".Search.Category.View.CategorySearch"
             android:exported="false" />
         <activity
             android:name=".OnBoardind.View.OnBoarding"
