--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MealPlaner"
         tools:targetApi="31">
         <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".IngridiantData.IngridiantActivity"
             android:exported="false" />
         <activity
@@ -26,7 +29,7 @@
             android:name=".LovedActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".Search.SearchmMethodsActivity"
             android:exported="false" />
         <activity
             android:name=".Meal.View.MealData"
