--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MealPlaner"
         tools:targetApi="31">
         <activity
-            android:name=".SearchActivity"
+            android:name=".Search.SearchActivity"
             android:exported="false" />
         <activity
             android:name=".IngridiantData.IngridiantActivity"
@@ -25,7 +25,7 @@
             android:name=".CalendarActivity"
             android:exported="false" />
         <activity
-            android:name=".FavouriteMealActivity"
+            android:name=".FavouriteMeals.View.FavouriteMealActivity"
             android:exported="false" />
         <activity
             android:name=".Search.SearchmMethodsActivity"
@@ -55,7 +55,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".HomePage.View.MainActivity"
             android:exported="true" />
     </application>
 
