--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.MealPlaner"
         tools:targetApi="31">
         <activity
+            android:name=".Search.FlagSearch.FlagActivity"
+            android:exported="false" />
+        <activity
             android:name=".Search.SearchActivity"
             android:exported="false" />
         <activity
