--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MealPlaner"
         tools:targetApi="31">
+        <activity
+            android:name=".Profile.ProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".Search.SearchActivity"
             android:exported="false" />
