--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,9 +78,9 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.0'
     annotationProcessor 'androidx.room:room-compiler:2.5.0'
     implementation 'androidx.room:room-rxjava2:2.5.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+  /* implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'*/
    // implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 
     // google sign in library
