--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,14 @@ buildscript {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
 
-        mavenCentral()  // Maven Central repository
+       mavenCentral()  // Maven Central repository
 
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
+        //classpath 'com.google.gms:google-services:4.3.15'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
