--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.8'
+    //api 'com.theartofdev.edmodo:android-image-cropper:'
 
     // google sign in library
     //implementation 'com.google.android.gms:play-services-auth:20.4.1'
