--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
 }
 
 dependencies {
+    //implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
@@ -39,6 +43,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+  //  implementation 'com.google.firebase:firebase-auth:21.1.0'
     //implementation 'com.google.android.gms:play-services-cast-framework:21.2.0'
     //implementation 'com.github.Drjacky:ImagePicker:v2.3.22'
 
@@ -88,8 +93,10 @@ dependencies {
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.8'
+  //  implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
     // google sign in library
     //implementation 'com.google.android.gms:play-services-auth:20.4.1'
+
 
 }
