--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-   implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
-  //  implementation 'com.google.firebase:firebase-auth:21.1.0'
-    //implementation 'com.google.android.gms:play-services-cast-framework:21.2.0'
+    //  implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.2.0'
     //implementation 'com.github.Drjacky:ImagePicker:v2.3.22'
 
     testImplementation 'junit:junit:4.13.2'
@@ -71,7 +71,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //viewimage
-    implementation'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
     //roundedImage
     //youtube vedio
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
@@ -80,16 +80,16 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  //  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    //  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
 
     implementation 'androidx.room:room-runtime:2.5.0'
     annotationProcessor 'androidx.room:room-compiler:2.5.0'
     implementation 'androidx.room:room-rxjava2:2.5.0'
-  /* implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'*/
-   // implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
+    /* implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+      implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+      implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'*/
+    // implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.8'
