--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,8 @@ android {
 }
 
 dependencies {
-    //implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 
-    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
-
+    implementation 'com.facebook.android:facebook-login:latest.release'
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
