--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     // google sign in library
     //implementation 'com.google.android.gms:play-services-auth:20.4.1'
