--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     // google sign in library
-    //implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
 }
